--- a/src/app/eventcard/summarytab/summarytab.component.html
+++ b/src/app/eventcard/summarytab/summarytab.component.html
@@ -18,6 +18,7 @@
   {{eventdates(eventA.startdate)}} until {{eventdates(eventA.enddate)}}</span>
 </ons-card>  
   <ons-card>
+     <ons-icon icon="fa-info-circle"></ons-icon>&nbsp;Information<br>
     <div [innerHTML]="eventA.publicnotes"></div>
   </ons-card>
   <ons-card>
