--- a/src/app/eventcard/attendancetab/attendancetab.component.html
+++ b/src/app/eventcard/attendancetab/attendancetab.component.html
@@ -18,30 +18,26 @@
     <ons-list>
     <ons-list-header>Members&nbsp;({{get_count(false)}})</ons-list-header>
     <div *ngFor="let att of event.items ; index as z">
-      <ons-list-item *ngIf="att.attending === 'Yes' && att.patrolid > -1" >
+      <ons-list-item expandable *ngIf="att.attending === 'Yes' && att.patrolid > -1" >
       
-      
-      
-      
-      <!--<div class="left list-item__icon"> 
-      <ons-icon  class="list-item__icon" icon="fa-check-circle" style="color:  #23a950" *ngIf="att.attending === 'Yes'"></ons-icon>
-      </div>-->
-
       <div class="center">{{att.firstname}} {{att.lastname}}</div>
+      <div class="expandable-content">
+        <ons-list>
+         <ons-list-item modifier="chevron" (click)="goto_scoutcard($event,att);" >Contact Details</ons-list-item>
+        </ons-list>
+       </div>  
       </ons-list-item>
       </div>
        <ons-list-header>Leaders&nbsp;({{get_count(true)}})</ons-list-header>
         <div *ngFor="let att of event.items ; index as z">
-      <ons-list-item *ngIf="att.attending === 'Yes' && att.patrolid < 0" >
+      <ons-list-item expandable *ngIf="att.attending === 'Yes' && att.patrolid < 0" >
       
-      
-      
-      
-      <!--<div class="left list-item__icon"> 
-      <ons-icon  class="list-item__icon" icon="fa-check-circle" style="color:  #23a950" *ngIf="att.attending === 'Yes'"></ons-icon>
-      </div>-->
-
       <div class="center">{{att.firstname}} {{att.lastname}}</div>
+       <div class="expandable-content">
+        <ons-list>
+         <ons-list-item (click)="goto_scoutcard($event,att);">Goto Contact Details >Contact Details</ons-list-item>
+        </ons-list>
+       </div>  
       </ons-list-item>
       </div>
     </ons-list>
