--- a/src/app/medicalcard/medicalcard.component.html
+++ b/src/app/medicalcard/medicalcard.component.html
@@ -48,7 +48,7 @@
         </div>
       </ons-card>
       <ons-card>
-        <p (click)="goto_scoutcard($event,member);">Goto Contact Details > </p>
+         <ons-list-item modifier="chevron nodivider" (click)="goto_scoutcard($event,member);" > <ons-icon icon="fa-user"></ons-icon>&nbsp;Contact Details</ons-list-item>
       
       </ons-card>
      
