Deal with Members you no longer have access to

--- a/src/app/scoutcard/scoutcard.component.html
+++ b/src/app/scoutcard/scoutcard.component.html
@@ -14,10 +14,15 @@
 </ons-toolbar>
 
 <div class="content">
+  <span *ngIf="member !== undefined">
   <ons-tabbar swipeable>
   <ons-tab label="Details" icon="fa-user-tag" active [page]="persontab"></ons-tab>
   <ons-tab label="Events" icon="fa-clipboard-list" [page]="eventtab"></ons-tab>
 </ons-tabbar>
-
-  
+</span>
+ <span *ngIf="member === undefined">
+   <ons-card>
+     Sorry. You no longer have access to this membership record
+   </ons-card>  
+ </span>    
 </div> 
