--- a/src/app/eventcard/attendancetab/attendancetab.component.html
+++ b/src/app/eventcard/attendancetab/attendancetab.component.html
@@ -1,6 +1,6 @@
 <ons-card>
     <span class="head">{{eventA.name}}</span><br>  
-  <span class="subhead">{{eventdates(eventA.startdate,eventA.enddate)}}</span>
+ <!-- <span class="subhead">{{eventdates(eventA.startdate,eventA.enddate)}}</span> -->
 </ons-card>     
   <ons-card>
     <p class="card_title"><ons-icon   icon="fa-users" ></ons-icon>&nbsp;Attendance</p>
