--- a/src/app/eventcard/attendancetab/attendancetab.component.html
+++ b/src/app/eventcard/attendancetab/attendancetab.component.html
@@ -1,5 +1,5 @@
 <ons-card>
-    <span class="head">{{eventA.name}}</span><br>  
+    <span class="head">{{eventA.name}}</span>  
  <!-- <span class="subhead">{{eventdates(eventA.startdate,eventA.enddate)}}</span> -->
 </ons-card>     
   <ons-card>
