Signup date logic

--- a/src/app/eventcard/summarytab/summarytab.component.html
+++ b/src/app/eventcard/summarytab/summarytab.component.html
@@ -16,6 +16,10 @@
   {{eventdates(eventA.startdate)}} </span>
    <span *ngIf="eventdates(eventA.startdate) != '' && eventdates(eventA.enddate) != '' && eventA.starttime == null && eventA.endtime == null" >
   {{eventdates(eventA.startdate)}} until {{eventdates(eventA.enddate)}}</span>
+  <br>
+  <p *ngIf="signup(eventA.confdate) == 0"><ons-icon icon="fa-exclamation-circle" style="color:red;"></ons-icon>&nbsp;Signup for this event closes today</p>
+  <p *ngIf="signup(eventA.confdate) > 0"><ons-icon icon="fa-check-circle" style="color:green;"></ons-icon>&nbsp;Signup for this event closes in {{signup(eventA.confdate)}} days on {{eventdates(eventA.confdate)}}.</p>
+  <p *ngIf="signup(eventA.confdate) < 0"><ons-icon icon="fa-times-circle" style="color:red;"></ons-icon>&nbsp;Signup for this event closed  on {{eventdates(eventA.confdate)}}.</p>
 </ons-card>  
   <ons-card>
      <ons-icon icon="fa-info-circle"></ons-icon>&nbsp;Information<br>
