Open/Closed Events in list view

--- a/src/app/eventcard/attendancetab/attendancetab.component.html
+++ b/src/app/eventcard/attendancetab/attendancetab.component.html
@@ -22,8 +22,14 @@
       
       <div class="center">{{att.firstname}} {{att.lastname}}</div>
       <div class="expandable-content">
-        <ons-list>
-         <ons-list-item modifier="chevron" (click)="goto_scoutcard($event,att);" > <ons-icon icon="fa-user"></ons-icon>&nbsp;Contact Details</ons-list-item>
+        <ons-list modifier="inset">
+        <ons-list-header>Extra Info</ons-list-header>
+        <ons-list-item modifier="chevron longdivider" (click)="goto_scoutcard($event,att);" > <ons-icon icon="fa-user"></ons-icon>&nbsp;Contact Details</ons-list-item>  
+          <span *ngFor="let value of eventA.structure[1].rows ; index as z">
+              <ons-list-item modifier="longdivider" *ngIf="value.field != 'info'">
+                <span class="list-item__subtitle">{{value.name}}</span><span class="list-item__title"><ons-icon style="color: green;" icon="fa-coins"  *ngIf="value.field.substring(0, 1) == 'p'"></ons-icon><ons-icon icon="fa-info-circle"  style="color: blue;" *ngIf="value.field.substring(0, 1) != 'p'"></ons-icon>&nbsp;{{att[value.field]}}</span></ons-list-item>
+         </span> 
+         
         </ons-list>
        </div>  
       </ons-list-item>
@@ -33,11 +39,17 @@
       <ons-list-item expandable *ngIf="att.attending === 'Yes' && att.patrolid < 0" >
       
       <div class="center">{{att.firstname}} {{att.lastname}}</div>
-       <div class="expandable-content">
-        <ons-list>
-         <ons-list-item (click)="goto_scoutcard($event,att);"><ons-icon icon="fa-user"></ons-icon>&nbsp;Contact Details</ons-list-item>
+      <div class="expandable-content">
+        <ons-list modifier="inset">
+        <ons-list-header>Extra Info</ons-list-header>
+        <ons-list-item modifier="chevron longdivider" (click)="goto_scoutcard($event,att);" > <ons-icon icon="fa-user"></ons-icon>&nbsp;Contact Details</ons-list-item>  
+          <span *ngFor="let value of eventA.structure[1].rows ; index as z">
+              <ons-list-item modifier="longdivider" *ngIf="value.field != 'info'">
+                <span class="list-item__subtitle">{{value.name}}</span><span class="list-item__title"><ons-icon style="color: green;" icon="fa-coins"  *ngIf="value.field.substring(0, 1) == 'p'"></ons-icon><ons-icon icon="fa-info-circle"  style="color: blue;" *ngIf="value.field.substring(0, 1) != 'p'"></ons-icon>&nbsp;{{att[value.field]}}</span></ons-list-item>
+         </span> 
+         
         </ons-list>
-       </div>  
+       </div>
       </ons-list-item>
       </div>
     </ons-list>
