Main menu margins

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -16,10 +16,10 @@
         <div class="content">
       <div *ngIf="globals.secret!=''">    
       <h2>Welcome</h2>
-      <p>
+      <p class="switchsec">
       <b>Current Term:</b> <span *ngIf="globals.current_term!='-1'">{{globals.config[2][globals.mysection][globals.current_term].name}}</span>&nbsp;<ons-icon (click)="loadPage(termselect)" icon="fa-exchange-alt"></ons-icon>
       </p>
-      <p>
+      <p class="switchsec">
       <b>Section:</b>  {{globals.sectionname}}&nbsp;<ons-icon icon="fa-exchange-alt" (click)="loadPage(sectionselect)"></ons-icon>    
       </p>
         <div class="member_outer" (click)="loadPage(medical)">
