--- a/src/app/eventcard/summarytab/summarytab.component.html
+++ b/src/app/eventcard/summarytab/summarytab.component.html
@@ -23,7 +23,7 @@
   <p *ngIf="signup(eventA.confdate) < 0"><ons-icon icon="fa-times-circle" style="color:red;"></ons-icon>&nbsp;Signup for this event closed  on {{eventdates(eventA.confdate)}}.</p>
 </ons-card>  
 <ons-card>
-  <ons-list-item (click)="goto_medical()" modifier="chevron nodivider"><ons-icon icon="fa-ambulance"></ons-icon>&nbsp;Attendees Medical Info</ons-list-item>
+  <ons-list-item (click)="goto_medical()" modifier="chevron nodivider"><ons-icon icon="fa-ambulance"></ons-icon>&nbsp;&nbsp;Attendees Medical Info</ons-list-item>
 </ons-card>  
   <ons-card *ngIf="eventA.publicnotes != ''">
      <ons-icon icon="fa-info-circle"></ons-icon>&nbsp;Information<br>
