--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -76,7 +76,12 @@
           <div class="member_name">Terms</div>
          </div> 
       </div>
-      
+      <div class="member_outer" (click)="doPDF()">
+           <div class="member_inner">
+          <div class="member_box"><div class="member_initial"><ons-icon icon="fa-print"></ons-icon></div></div>
+          <div class="member_name">PDF</div>
+         </div> 
+      </div>
     
       </div>
     </div>
