Add PDF Medical Report

--- a/src/app/medical/medical.component.html
+++ b/src/app/medical/medical.component.html
@@ -22,6 +22,9 @@
 		<ons-fab  >
 			<ons-icon icon="md-eye"></ons-icon>
 		</ons-fab>
+    <ons-speed-dial-item (click)="make_PDF()" >
+			<ons-icon icon="fa-print"></ons-icon>
+		</ons-speed-dial-item>
 		<ons-speed-dial-item (click)="summary(1)" >
 			<ons-icon icon="fa-file-medical"></ons-icon>
 		</ons-speed-dial-item>
