--- a/src/app/medicalsummary/medicalsummary.component.css
+++ b/src/app/medicalsummary/medicalsummary.component.css
@@ -4,9 +4,10 @@
 .detail_stuff {clear: left; width: 100%; }
 .member_name {    color: #7413dc;
     font-weight: bolder;}    
-.header {background-color:#00a794; color: white; font-weight: 900; }
+.header {background-color:#00a794; color: white; font-weight: 600; }
 p.medical{ font-weight: bold;}
 p.dietary{ font-weight: bold;}
 p.other{ font-weight: bold;}
 p.allergy{ font-weight: bold;}
+span.sbold {font-weight: bold;}
 .card_header { background-color: #00a794;}
