--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@
   --scoutpurple: #7413dc; 
 }
 :checked+.segment__button {  background-color: #00a794; color: white !important}
+ons-speed-dial-item.fab { background-color: #7413dc; color: white !important}
 button.fab, button.fab:active, ons-fab.fab:active, ons-fab.fab { background-color:  #7413dc; color: white !important }
 ons-speed-dial-item.fab:active { background-color:  rgb(0, 167, 148); color: white !important}
 .segment__button { color: black}
