--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -58,7 +58,7 @@
           <div class="member_name">Events</div>
          </div> 
       </div>
-      <div class="member_outer">
+      <div class="member_outer" (click)="loadPage(program)">
            <div class="member_inner">
           <div class="member_box"><div class="member_initial"><ons-icon icon="fa-cubes"></ons-icon></div></div>
           <div class="member_name">Programme</div>
