--- a/src/app/eventcard/attendancetab/attendancetab.component.css
+++ b/src/app/eventcard/attendancetab/attendancetab.component.css
@@ -1,3 +1,4 @@
 .head { color: #7413dc; font-size: 16pt; font-weight: 600;}
 .subhead { font-size: 10pt;}
 .list-header { background-color:  #00a794; color: white; }  
+.sum_seg {display: none}
