--- a/src/app/eventcard/attendancetab/attendancetab.component.css
+++ b/src/app/eventcard/attendancetab/attendancetab.component.css
@@ -2,3 +2,9 @@
 .subhead { font-size: 10pt;}
 .list-header { background-color:  #00a794; color: white; }  
 .sum_seg {display: none}
+.table{ display: flex; flex-wrap: wrap;}
+.table_row{ 
+flex-grow: 1;
+width: 40%;
+  padding-bottom: 10px;
+}
