UNdecided and answers tab

--- a/src/app/eventcard/eventcard.component.html
+++ b/src/app/eventcard/eventcard.component.html
@@ -18,6 +18,7 @@
   <ons-tabbar swipeable>
   <ons-tab label="Details" icon="fa-eye" active [page]="summarytab"></ons-tab>
   <ons-tab label="Attend" icon="fa-users" [page]="attendancetab"></ons-tab>
+  <ons-tab label="Responses" icon="fa-list-alt" [page]="answertab"></ons-tab>
 </ons-tabbar>
 
   
