--- a/src/app/eventcard/attendancetab/attendancetab.component.html
+++ b/src/app/eventcard/attendancetab/attendancetab.component.html
@@ -58,11 +58,12 @@
   <ons-card>
   <ons-icon icon="fa-layer-group"></ons-icon>&nbsp;Attendees grouped by {{group_label[group_seg]}}
     <ons-segment #segment id="segment_summary" style="margin-top: 8px; width: 100%">
-            <button (click)="update_summary()"><ons-icon icon="fa-venus-mars" size="15pt"></ons-icon></button>
-            <button (click)="update_summary()"><ons-icon icon="fa-swimmer" size="15pt"></ons-icon></button>
-            <button (click)="update_summary()"><ons-icon icon="fa-users" size="15pt"></ons-icon></button>
-            <button (click)="update_summary()"><ons-icon icon="fa-user-tag" size="15pt"></ons-icon></button>
-            <button (click)="update_summary()"><ons-icon icon="fa-calendar" size="15pt"></ons-icon></button>
+            <button (click)="update_summary()">
+             <ons-icon icon="fa-venus-mars" size="15pt" style="padding-top: 5px;"></ons-icon></button>
+            <button (click)="update_summary()"><ons-icon icon="fa-swimmer" size="15pt"style="padding-top: 5px;"></ons-icon></button>
+            <button (click)="update_summary()"><ons-icon icon="fa-users" size="15pt"style="padding-top: 5px;"></ons-icon></button>
+            <button (click)="update_summary()"><ons-icon icon="fa-user-tag" size="15pt"style="padding-top: 5px;"></ons-icon></button>
+            <button (click)="update_summary()"><ons-icon icon="fa-calendar" size="15pt"style="padding-top: 5px;"></ons-icon></button>
             
           </ons-segment>
           <div  style="padding-top: 10px;" class="table"><div (click)="inc_leaders()"class="table_row"><ons-checkbox id="reactive-checkbox" class="form-control left" ></ons-checkbox> Include Leaders</div><!--<div  class="table_row"> Include Leaders</div>--></div>
